--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-MONGO_URI=
+MONGO_URI=mongodb+srv://oGreenMetrics123:oGreenMetrics123@cluster0.guhiq.mongodb.net/
 PORT=3000
+JWT_SECRET=my$3cr3tK3y@1234!$t0kenS3cr3t
+SALT=10
