auth jwt commit

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 MONGO_URI=mongodb+srv://oGreenMetrics123:oGreenMetrics123@cluster0.guhiq.mongodb.net/
 PORT=3000
 JWT_SECRET=my$3cr3tK3y@1234!$t0kenS3cr3t
+NODE_ENV=development
 SALT=10
+MAX_AGE=60 * 60 * 3 * 1000
