--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "fastify": "^5.2.1",
+    "fastify-cookie": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.2",
     "nodemon": "^3.1.9"
