--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "fastify-cookie": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
