--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fastify/cors": "^11.0.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "fastify-cookie": "^5.6.1",
