reset password commit

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ JWT_SECRET=my$3cr3tK3y@1234!$t0kenS3cr3t
 NODE_ENV=development
 SALT=10
 MAX_AGE=60 * 60 * 3 * 1000
+EMAIL_USER=amirsouaf1212@gmail.com
+EMAIL_PASS=kklp idnt yofa yply
