--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ SALT=10
 MAX_AGE=60 * 60 * 3 * 1000
 EMAIL_USER=amirsouaf1212@gmail.com
 EMAIL_PASS=kklp idnt yofa yply
+CLOUDINARY_CLOUD_NAME=dwm5fb9l0
+CLOUDINARY_API_KEY=613126155286866
+CLOUDINARY_API_SECRET=Cj1U1-ppwkqbsvUt8L5354cfK0Y
