--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fastify/cors": "^11.0.0",
     "@fastify/formbody": "^8.0.2",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
