--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "mongoose": "^8.10.2",
     "node-cron": "^4.0.5",
     "nodemailer": "^6.10.0",
-    "nodemon": "^3.1.9",
-    "socket.io": "^4.8.1"
+    "nodemon": "^3.1.9"
   }
 }
