--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.10.2",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "puppeteer": "^24.9.0",
     "socket.io": "^4.8.1"
   }
 }
